chnage rotate and flip behaviors, fix align

--- a/text-effects/styles/stage.scss
+++ b/text-effects/styles/stage.scss
@@ -7,18 +7,23 @@
     grid-template-areas: "content";
     place-items: center;
 
-    > * {
+    .media,
+    svg {
       grid-area: content;
       width: 100%;
       height: 100%;
       min-width: 0;
       min-height: 0;
+
+      video,
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
     }
-    > video,
-    > img {
-      object-fit: cover;
-    }
-    > svg {
+
+    svg {
       overflow: visible;
     }
   }
